# Colorit

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
colorit/: hooks.py  modules.txt
colorit/colorit_settings/doctype/colorit_settings/: colorit_settings.json  colorit_settings.py
colorit/config/: desktop.py
colorit/public/css/: colorit.css
colorit/public/js/: colorit.js
